Fix alignment on the images in section two
added a right margin to the images, still can't figure out how to center them organically

--- a/style.css
+++ b/style.css
@@ -111,6 +111,7 @@ body {
     gap: 100px;
     align-items: center;
     justify-content: center;
+    margin-right: 100px;
 }
 
 .card {
@@ -146,11 +147,15 @@ body {
     font-style: italic;
     width: 800px;
     margin-top: 200px;
+    padding: 0px;
 }
 
 .attribution {
     margin-top: 0px;
     font-size: 24px;
     margin-bottom: 150px;
-    margin-left: 700px;
+    margin-left: 600px;
 }
+
+/*SECTION FOUR STYLING*/
+
